--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<head>
-    <p>intuito</p>
+
+<title>Dificuldade das areas rurais para as grandes cidades</title>
+
+<body>
+    <head>
+    <p>intuito</p> 
 </head>
+</body>
