--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <title>Dificuldade das areas rurais para as grandes cidades</title>
 
-<h1>Dificuldade das areas rurais para as grandes cidades</h1>
+<center><h1>Dificuldade das areas rurais para as grandes cidades</h1>
+</center>
 
 <body>
     <head>
