--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-
-<title>Dificuldade das areas rurais para as grandes cidades</title>
-
-<center><h1>Dificuldade das areas rurais para as grandes cidades</h1>
-</center>
-
-<body>
-    <head>
-    <p>intuito</p> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<body>
+    <h1>Dificuldade das areas rurais para as grandes cidades</h1>
 </body>
+</html>
