--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>2I Cep</title>
 </head>
 <body>
-    <h2>Dificuldade das areas rurais para as grandes cidades</h2>
+    <h1>Dificuldade das areas rurais para as grandes cidades</h1>
+    <h2>e como enfrentalas</h2>
 </body>
 </html>
