--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-</head>
+    <link rel="stylesheet" href="style.css">
 <body>
+    <header>sim</header>
     <h1>Dificuldade das areas rurais para as grandes cidades</h1>
     <h2>e como enfrentalas</h2>
 </body>
 </html>
+
+<header>sim</header>
