--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>2I Cep</title>
     <link rel="stylesheet" href="style.css">
 <body>
-    <header>necortico
-    </header>
+    <header>Do campo a cidade</header>
     <h1>Dificuldade das areas rurais para as grandes cidades</h1>
     <h2>e como enfrentalas</h2>
 </body>
