--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Do campo a cidade</h1>
-        <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal">
+        <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
         <a href="https://www.cep.pr.gov.br/">quem somos</a>
 
     </header>
