--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <header>
         <h1>Do campo a cidade</h1>
-        <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
-        <a href="https://www.cep.pr.gov.br/">quem somos</a>
-
+        <div>
+            <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
+            <a href="https://www.cep.pr.gov.br/">quem somos</a>
+        </div>
     </header>
     <h1>Dificuldade das areas rurais para as grandes cidades</h1>
     <h2>e como enfrentalas</h2>
