--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Do campo a cidade</h1>
+        <h1 class="titulo">Do campo a cidade</h1>
         <div>
             <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
             <h3>
