--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1 class="titulo">Do campo a cidade</h1>
+        <h1 class="baska">Do campo a cidade</h1>
         <div>
             <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
             <h3>
@@ -17,7 +17,7 @@
             </h3>
         </div>
     </header>
-    <h1>Dificuldade das areas rurais para as grandes cidades</h1>
+    <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
     <h2>e como enfrentalas</h2>
 </body>
 
