--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1 class="baska">Do campo a cidade</h1>
+        <h1>Do campo a cidade</h1>
         <div>
             <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
             <h3>
@@ -18,7 +18,7 @@
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
-    <h2>e como enfrentalas</h2>
+    <h2 class="baska">e como enfrentalas</h2>
 </body>
 
 </html>
