--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </h3>
         </div>
     </header>
-    <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
-    <h2 class="baska">e como enfrentalas</h2>
-</body>
+    <header><h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
+        <h2 class="baska">e como enfrentalas</h2></header>
+    
 
 </html>
