--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <h1>Do campo a cidade</h1>
         <div>
-            <img src="cep.png" alt="mulher chorando após ser abatida pela policia federal" class="bacalhao">
+            <img src="cep.png" alt="cep logo" class="bacalhao">
             <h3>
                 <a href="https://www.cep.pr.gov.br/">quem somos</a>
             </h3>
         </div>
     </header>
-    <header><h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
-        <h2 class="baska">e como enfrentalas</h2></header>
+    <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
+    <h2 class="baska">e como enfrentalas</h2>
     
 
 </html>
