--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Do campo a cidade</h1>
         <div>
-            <img src="cep.png" alt="cep logo" class="bacalhao">
+            <a href=""https://www.cep.pr.gov.br/""><img src="cep.png" alt="cep logo" class="bacalhao"></a>
             <h3>
-                <a href="https://www.cep.pr.gov.br/">quem somos</a>
+                <a href=>quem somos</a>
             </h3>
         </div>
     </header>
