--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Do campo a cidade</h1>
         <div>
-            <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao">quem somos</a>
+            <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
