--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <header>
         <h1>Do campo a cidade</h1>
-        <div></div>
-        <div>
+        <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
+    <div class="joa">
     <h2 class="baska">e como enfrentalas</h2>
-    
+    </div>
 
 
 
     <button>
-        <a href="cinza/cinza.html"></a>
+        <a href="cinza/cinza.html">Clique Aqui</a>
         
     </button>
 </html>
