--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>2I Cep</title>
     <link rel="stylesheet" href="style.css">
 
-<body>
+<body> 
+     <button>
+        <a href="cinza/cinza.html">abacate</a>
+        
+    </button>
     <header>
         <h1>Do campo a cidade</h1>
         <div class="gar">
@@ -21,8 +25,5 @@
 
 
 
-    <button>
-        <a href="cinza/cinza.html">Clique Aqui</a>
-        
-    </button>
+  
 </html>
