--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         
         <h1>Do campo a cidade</h1>
         <button>
-        <a href="cinza/cinza.html">abacate</a>
+        <a href="index.html">index</a>
         </button>
         <button>
-        <a href="cinza/cinza.html">abacate</a>
+        <a href="cinza/cinza.html">cinza</a>
         </button>
          <button>
-        <a href="cinza/cinza.html">abacate</a>
+        <a href="mestre/mestre.html">mestre</a>
         </button>
         <button>
-        <a href="cinza/cinza.html">abacate</a>
+        <a href="abacate/abacate.html">abacate</a>
         </button>
         <button>
-        <a href="cinza/cinza.html">abacate</a>
+        <a href="frontline/frontline.html">frontline</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
