--- a/mestre/mestre.html
+++ b/mestre/mestre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mestre.css">
 
 <body> 
      
@@ -13,19 +13,19 @@
         
         <h1>Do campo a cidade</h1>
         <button>
-        <a href="index.html">index</a>
+        <a href="../index.html">index</a>
         </button>
         <button>
-        <a href="cinza/cinza.html">cinza</a>
+        <a href="../cinza/cinza.html">cinza</a>
         </button>
          <button>
-        <a href="mestre/mestre.html">mestre</a>
+        <a href="../mestre/mestre.html">mestre</a>
         </button>
         <button>
-        <a href="abacate/abacate.html">abacate</a>
+        <a href="../abacate/abacate.html">abacate</a>
         </button>
         <button>
-        <a href="frontline/frontline.html">frontline</a>
+        <a href="../frontline/frontline.html">frontline</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
@@ -36,7 +36,7 @@
     <h2 class="baska">e como enfrentalas</h2>
     </div>
 
-<img src="autismo2.png" alt="">
+<img src="../autismo2.png" alt="">
 
   
 </html>
