--- a/cinza/cinza.html
+++ b/cinza/cinza.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="cinza.css">
+    <link rel="stylesheet" href="../style.css">
 
 <body> 
      
@@ -28,7 +28,7 @@
         <a href="../frontline/frontline.html">frontline</a>
         </button>
         <div class="gar">
-            <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
+            <a href="https://www.cep.pr.gov.br/"><img src="../cep.png" alt="cep logo" class="bacalhao"></a>
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
