--- a/htmls/abacate.html
+++ b/htmls/abacate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
 <body> 
      
@@ -36,7 +36,9 @@
     <h2 class="baska">e como enfrentalas</h2>
     </div>
 
-<img src="../autismo2.png" alt="">
+    <img src="../coração.png" alt="">
+
+
 
   
 </html>
