--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
 <body> 
      
@@ -13,31 +13,28 @@
         
         <h1>Do campo a cidade</h1>
         <button>
-        <a href="../index.html">index</a>
+        <a href="../htmls/index.html">index</a>
         </button>
         <button>
-        <a href="../cinza/cinza.html">cinza</a>
+        <a href="../htmls/cinza.html">cinza</a>
         </button>
          <button>
-        <a href="../mestre/mestre.html">mestre</a>
+        <a class="tempero" href="../htmls/mestre.html">mestre</a>
         </button>
         <button>
-        <a href="../abacate/abacate.html">abacate</a>
+        <a href="../htmls/abacate.html">abacate</a>
         </button>
         <button>
-        <a href="../frontline/frontline.html">frontline</a>
+        <a href="../htmls/frontline.html">frontline</a>
         </button>
         <div class="gar">
-            <a href="https://www.cep.pr.gov.br/"><img src="../cep.png" alt="cep logo" class="bacalhao"></a>
+            <a href="https://www.cep.pr.gov.br/"><img src="cep.png" alt="cep logo" class="bacalhao"></a>
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
     <div class="joa">
     <h2 class="baska">e como enfrentalas</h2>
     </div>
-
-    <img src="../coração.png" alt="">
-
 
 
   
