--- a/htmls/index.html
+++ b/htmls/index.html
@@ -18,8 +18,8 @@
         <button>
         <a href="../htmls/cinza.html">cinza</a>
         </button>
-         <button>
-        <a class="tempero" href="../htmls/mestre.html">mestre</a>
+         <button class="tempero">
+        <a href="../htmls/mestre.html">mestre</a>
         </button>
         <button>
         <a href="../htmls/abacate.html">abacate</a>
