--- a/htmls/abacate.html
+++ b/htmls/abacate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/abacate.css">
 
 <body> 
      
@@ -13,19 +13,19 @@
         
         <h1>Do campo a cidade</h1>
         <button>
-        <a href="../index.html">index</a>
+        <a href="../htmls/index.html">index</a>
         </button>
         <button>
-        <a href="../cinza/cinza.html">cinza</a>
+        <a href="../htmls/cinza.html">cinza</a>
         </button>
-         <button>
-        <a href="../mestre/mestre.html">mestre</a>
-        </button>
-        <button>
-        <a href="../abacate/abacate.html">abacate</a>
+         <button class="tempero">
+        <a href="../htmls/mestre.html">mestre</a>
         </button>
         <button>
-        <a href="../frontline/frontline.html">frontline</a>
+        <a href="../htmls/abacate.html">abacate</a>
+        </button>
+        <button>
+        <a href="../htmls/frontline.html">frontline</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="../cep.png" alt="cep logo" class="bacalhao"></a>
