--- a/htmls/frontline.html
+++ b/htmls/frontline.html
@@ -18,7 +18,7 @@
         <button>
         <a href="../htmls/cinza.html">cinza</a>
         </button>
-         <button class="tempero">
+        <button>
         <a href="../htmls/mestre.html">mestre</a>
         </button>
         <button>
@@ -28,7 +28,7 @@
         <a href="../htmls/frontline.html">frontline</a>
         </button>
         <div class="gar">
-            <a href="https://www.cep.pr.gov.br/"><img src="../cep.png" alt="cep logo" class="bacalhao"></a>
+            <a href="https://www.cep.pr.gov.br/"><img src="../imgs/cep.png" alt="cep logo" class="bacalhao"></a>
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
