--- a/abacate/abacate.html
+++ b/abacate/abacate.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../styles/abacate.css">
 
 <body> 
      
     <header>
         
         <h1>Do campo a cidade</h1>
+        <button>
+        <a href="../index.html">index</a>
+        </button>
+        <button>
+        <a href="../cinza/cinza.html">cinza</a>
+        </button>
+         <button>
+        <a href="../mestre/mestre.html">mestre</a>
+        </button>
         <button class="tempero">
-        <a href="">index</a>
+        <a href="">abacate</a>
         </button>
         <button>
-        <a href="../htmls/cinza.html">cinza</a>
-        </button>
-        <button>
-        <a href="../htmls/mestre.html">mestre</a>
-        </button>
-        <button>
-        <a href="../htmls/abacate.html">abacate</a>
-        </button>
-        <button>
-        <a href="../htmls/frontline.html">frontline</a>
+        <a href="../frontline/frontline.html">frontline</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="../imgs/cep.png" alt="cep logo" class="bacalhao"></a>
