--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <a href="">index</a>
         </button>
         <button>
-        <a href="../htmls/cinza.html">cinza</a>
+        <a href="cinza/cinza.html">cinza</a>
         </button>
         <button>
-        <a href="../htmls/mestre.html">mestre</a>
+        <a href="mestre/mestre.html">mestre</a>
         </button>
         <button>
-        <a href="../htmls/abacate.html">abacate</a>
+        <a href="abacate/abacate.html">abacate</a>
         </button>
         <button>
-        <a href="../htmls/frontline.html">frontline</a>
+        <a href="frontline/frontline.html">frontline</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="../imgs/cep.png" alt="cep logo" class="bacalhao"></a>
