--- a/abacate/abacate.html
+++ b/abacate/abacate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="../styles/abacate.css">
+    <link rel="stylesheet" href="abacate.css">
 
 <body> 
      
