--- a/cinza/cinza.html
+++ b/cinza/cinza.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2I Cep</title>
-    <link rel="stylesheet" href="../styles/cinza.css">
+    <link rel="stylesheet" href="cinza.css">
 
 <body> 
      
