--- a/mestre/mestre.html
+++ b/mestre/mestre.html
@@ -13,19 +13,19 @@
         
         <h1>Do campo a cidade</h1>
         <button>
-        <a href="../index.html">index</a>
+        <a href="../index.html">inicio</a>
         </button>
         <button>
-        <a href="../cinza/cinza.html">cinza</a>
+        <a href="../cinza/cinza.html">motivos</a>
         </button>
          <button class="tempero">
-        <a href="">mestre</a>
+        <a href="">problemas</a>
         </button>
         <button>
-        <a href="../abacate/abacate.html">abacate</a>
+        <a href="../abacate/abacate.html">possivel solução</a>
         </button>
         <button>
-        <a href="../frontline/frontline.html">frontline</a>
+        <a href="../frontline/frontline.html">creditos</a>
         </button>
         <div class="gar">
             <a href="https://www.cep.pr.gov.br/"><img src="../imgs/cep.png" alt="cep logo" class="bacalhao"></a>
