--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
     <div class="joa">
     <h2 class="baska">e como enfrentalas</h2>
     </div>
+    <header>
+        <h2>Nos últimos anos, a migração tem se tornado um dos temas mais debatidos e complexos na arena global. Com milhões de pessoas se deslocando através de fronteiras em busca de melhores condições de vida, segurança e oportunidades, a migração contemporânea levanta uma série de questões cruciais que precisam ser enfrentadas por governos, comunidades e organizações internacionais. Quais são as principais motivações que impulsionam essas massas migratórias? De que forma as nações receptoras estão lidando com a integração dos migrantes? E como as mudanças climáticas e conflitos políticos estão redefinindo os padrões de migração? Entender a dinâmica atual da migração é essencial para desenvolver políticas eficazes e promover uma coexistência harmoniosa em um mundo cada vez mais interconectado.</h2>
+    </header>
 
 </html>
