--- a/cinza/cinza.html
+++ b/cinza/cinza.html
@@ -36,8 +36,8 @@
     <h2 class="baska">e como enfrentalas</h2>
     </div>
     <div>
-        <h1>Migração para as Cidades</h1>
-        <h3>A migração do campo para a cidade é impulsionada por uma combinação de fatores que refletem as condições econômicas, sociais, ambientais e políticas das áreas rurais e urbanas. Entender esses motivos é crucial para a formulação de políticas eficazes que possam mitigar os efeitos negativos do êxodo rural e promover um desenvolvimento equilibrado entre o campo e a cidade.</h3>
+        <h1 class="h1">Migração para as Cidades</h1>
+        <h3 class="h3">A migração do campo para a cidade é impulsionada por uma combinação de fatores que refletem as condições econômicas, sociais, ambientais e políticas das áreas rurais e urbanas. Entender esses motivos é crucial para a formulação de políticas eficazes que possam mitigar os efeitos negativos do êxodo rural e promover um desenvolvimento equilibrado entre o campo e a cidade.</h3>
     </div>
     <footer class="ombro"> Por Adan Link, 2°ano, Colegio Estadual do Parana</footer>
 </html>
