--- a/cinza/cinza.html
+++ b/cinza/cinza.html
@@ -39,16 +39,17 @@
         <h1 class="h1">Migração para as Cidades</h1>
         <h3 class="h3">A migração do campo para a cidade é impulsionada por uma combinação de fatores que refletem as condições econômicas, sociais, ambientais e políticas das áreas rurais e urbanas. Entender esses motivos é crucial para a formulação de políticas eficazes que possam mitigar os efeitos negativos do êxodo rural e promover um desenvolvimento equilibrado entre o campo e a cidade.</h3>
     </div>
-    <div><h1>Razão Econômica</h1>
+    
+    <header>
+        <div class="tiba"><h1>Razão Econômica</h1>
         <h2> As cidades são frequentemente centros de atividade econômica, onde novas indústrias e serviços emergem constantemente, criando um mercado de trabalho dinâmico.</h2>
     </div>
-    <header>
     <div class="tiba"><h1>Razão educacional</h1>
         <h2>As áreas urbanas geralmente têm uma melhor infraestrutura educacional, incluindo escolas, universidades e instituições de ensino técnico e profissionalizante.</h2>
     </div>
     <div class="tiba"><h1>Razão saude</h1>
         <h2> A vida urbana pode oferecer melhor infraestrutura, incluindo saneamento básico, eletricidade, água potável e moradia adequada. </h2>
-    </div class="tiba">
+    </div >
     <footer class="ombro"> Por Adan Link, 2°ano, Colegio Estadual do Parana</footer>
 </header>
 </html>
