--- a/mestre/mestre.html
+++ b/mestre/mestre.html
@@ -25,8 +25,10 @@
         </div>
     </header>
     <h1 class="titulo">Dificuldade das areas rurais para as grandes cidades</h1>
-    <div class="joa">
-    <h2 class="baska">e como enfrentalas</h2>
+    <div class="bis">
+        <h1 class="omega">Problemas da Imigração para Áreas Rurais: Desafios e Implicações</h1>
+        <h3 class="beta" >A imigração para áreas rurais, embora muitas vezes vista como uma solução para revitalizar comunidades declinantes e impulsionar economias locais, traz consigo uma série de desafios complexos. As comunidades rurais, com suas infraestruturas e serviços frequentemente limitados, podem enfrentar dificuldades significativas ao tentar integrar novos residentes. Além disso, as diferenças culturais e linguísticas entre imigrantes e residentes locais podem gerar tensões sociais e dificuldades de adaptação. Questões relacionadas ao acesso a emprego, educação, saúde e habitação também emergem, complicando a transição dos imigrantes para a vida rural. Com a pressão adicional sobre os recursos naturais e a infraestrutura local, é essencial compreender e abordar esses desafios para garantir uma coexistência harmoniosa e produtiva entre imigrantes e comunidades rurais.</h3>
     </div>
+    <footer class="ombro"> Por Adan Link, 2°ano, Colegio Estadual do Parana</footer>
   
 </html>
