--- a/mestre/mestre.html
+++ b/mestre/mestre.html
@@ -28,7 +28,11 @@
     <div class="bis">
         <h1 class="omega">Problemas da Imigração para Áreas Rurais: Desafios e Implicações</h1>
         <h3 class="beta" >A imigração para áreas rurais, embora muitas vezes vista como uma solução para revitalizar comunidades declinantes e impulsionar economias locais, traz consigo uma série de desafios complexos. As comunidades rurais, com suas infraestruturas e serviços frequentemente limitados, podem enfrentar dificuldades significativas ao tentar integrar novos residentes. Além disso, as diferenças culturais e linguísticas entre imigrantes e residentes locais podem gerar tensões sociais e dificuldades de adaptação. Questões relacionadas ao acesso a emprego, educação, saúde e habitação também emergem, complicando a transição dos imigrantes para a vida rural. Com a pressão adicional sobre os recursos naturais e a infraestrutura local, é essencial compreender e abordar esses desafios para garantir uma coexistência harmoniosa e produtiva entre imigrantes e comunidades rurais.</h3>
-    </div>
+        <h3 class="beta">Diferenças Culturais: Os imigrantes podem ter dificuldades para se adaptar aos costumes e tradições locais, levando a possíveis tensões culturais.
+            Barreira Linguística: Se os imigrantes não falarem a língua local, isso pode dificultar a comunicação e a integração na comunidade.
+            Isolamento Social: Os imigrantes podem se sentir isolados devido à falta de redes de apoio social e comunitário nas áreas rurais.</h3>
+            <h3 class="beta">Acesso à Moradia: Encontrar moradia adequada pode ser difícil em áreas rurais, onde a oferta de habitação pode ser limitada.
+                Condições de Moradia: As condições das moradias disponíveis podem ser precárias, afetando a qualidade de vida dos imigrantes.</h3>
     <footer class="ombro"> Por Adan Link, 2°ano, Colegio Estadual do Parana</footer>
   
 </html>
