--- a/mestre/mestre.html
+++ b/mestre/mestre.html
@@ -33,6 +33,7 @@
             Isolamento Social: Os imigrantes podem se sentir isolados devido à falta de redes de apoio social e comunitário nas áreas rurais.</h3>
             <h3 class="beta">Acesso à Moradia: Encontrar moradia adequada pode ser difícil em áreas rurais, onde a oferta de habitação pode ser limitada.
                 Condições de Moradia: As condições das moradias disponíveis podem ser precárias, afetando a qualidade de vida dos imigrantes.</h3>
+                </div>
     <footer class="ombro"> Por Adan Link, 2°ano, Colegio Estadual do Parana</footer>
   
 </html>
